--- a/index.html
+++ b/index.html
@@ -115,7 +115,29 @@
             </div> <!-- centraliza-conteudo header-menu -->
         </header>
 
+        <section class="imagens-links">
+            <div class="centraliza-conteudo">
 
+                <nav class="navegacao-imagens">
+                    <a href="#" class="nav-imagem-item">
+                        <img src="imgs/img-link-whey-protein.png" alt="">
+                        <p>WHEY PROTEIN</p>
+                    </a>
+                    <a href="#" class="nav-imagem-item">
+                        <img src="imgs/img-link-pre-treinos.png" alt="">
+                        <p>PRÉ-TREINOS</p>
+                    </a>
+                    <a href="#" class="nav-imagem-item">
+                        <img src="imgs/img-link-creatinas.png" alt="">
+                        <p>CREATINAS</p>
+                    </a>
+                    <a href="#" class="nav-imagem-item">
+                        <img src="imgs/img-link-acessorios.png" alt="">
+                        <p>Acessórios</p>
+                    </a>
+                </nav>
+            </div>
+        </section>
     </div> <!-- conteudo -->
 </body> 
 </html>
