--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <div class="container-menu-hamburger fechado">
                     <span class="msg-bem-vindo">
-                         Olá seja bem vindo, ...
+                         Olá seja bem vindo, <span id="nome-cliente"></span>
                     </span>
 
                     <h3 class="titulo-menu">
@@ -117,27 +117,76 @@
 
         <section class="imagens-links">
             <div class="centraliza-conteudo">
-
                 <nav class="navegacao-imagens">
-                    <a href="#" class="nav-imagem-item">
-                        <img src="imgs/img-link-whey-protein.png" alt="">
-                        <p>WHEY PROTEIN</p>
-                    </a>
-                    <a href="#" class="nav-imagem-item">
-                        <img src="imgs/img-link-pre-treinos.png" alt="">
-                        <p>PRÉ-TREINOS</p>
-                    </a>
-                    <a href="#" class="nav-imagem-item">
-                        <img src="imgs/img-link-creatinas.png" alt="">
-                        <p>CREATINAS</p>
-                    </a>
-                    <a href="#" class="nav-imagem-item">
-                        <img src="imgs/img-link-acessorios.png" alt="">
-                        <p>Acessórios</p>
-                    </a>
+                    <a href="#" class="nav-img-item whey-item">WHEY PROTEIN</a>
+                    <a href="#" class="nav-img-item pre-treino-item">PRÉ-TREINOS</a>
+                    <a href="#" class="nav-img-item creatina-item">CREATINAS</a>
+                    <a href="#" class="nav-img-item acessorios-item">ACESSÓRIOS</a>
                 </nav>
             </div>
-        </section>
+        </section> <!-- imagens-links -->
+
+        <section class="secao-combos-promo">
+            <div class="centraliza-conteudo">
+                <h2 class="titulo-secao">COMBOS PROMOCIONAIS</h2>
+                
+                <div class="container-produtos">
+                    <div class="card-produto">
+                        <img src="https://placehold.co/200x200" alt="">
+
+                        <div class="container-preco-antigo">
+                            <span class="preco-antigo">
+                                R$ 420,00
+                            </span>
+                        </div>
+
+                        <button class="botao-preco-produto">
+                            R$ 345,00
+                        </button>
+                    </div>
+                    <div class="card-produto">
+                        <img src="https://placehold.co/200x200" alt="">
+
+                        <div class="container-preco-antigo">
+                            <span class="preco-antigo">
+                                R$ 420,00
+                            </span>
+                        </div>
+
+                        <button class="botao-preco-produto">
+                            R$ 345,00
+                        </button>
+                    </div>
+                    <div class="card-produto">
+                        <img src="https://placehold.co/200x200" alt="">
+
+                        <div class="container-preco-antigo">
+                            <span class="preco-antigo">
+                                R$ 420,00
+                            </span>
+                        </div>
+
+                        <button class="botao-preco-produto">
+                            R$ 345,00
+                        </button>
+                    </div>
+                </div>
+            </div> <!-- centraliza-conteudo -->
+        </section> <!-- secao-combos-promo -->
+
+        <footer >
+            <div class="centraliza-conteudo rodape-pagina">
+                <div class="container-redes-sociais">
+                    <a href="#">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+
+                    <a href="#">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                </div>
+            </div>
+        </footer>
     </div> <!-- conteudo -->
 </body> 
 </html>
