re-organização das pastas

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 </h3>
                 
                 <nav class="nav-menu">
-                    <a href="whey-protein.html" class="nav-item">Whey Protein</a>
-                    <a href="pre-treinos.html" class="nav-item">Pré Treinos</a>
-                    <a href="creatinas.html" class="nav-item">Creatinas</a>
-                    <a href="acessorios.html" class="nav-item">Acessórios</a>
+                    <a href="paginas/whey-protein.html" class="nav-item">Whey Protein</a>
+                    <a href="paginas/pre-treinos.html" class="nav-item">Pré Treinos</a>
+                    <a href="paginas/creatinas.html" class="nav-item">Creatinas</a>
+                    <a href="paginas/acessorios.html" class="nav-item">Acessórios</a>
                 </nav>
             </div>
             
