criação pagina de cadastro

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             
             <div class="menu-direita-header">
                 <button id="minha-conta-botao">
-                    <i class="fa-solid fa-user"></i>
+                    <a href="paginas/cadastro.html">
+                        <i class="fa-solid fa-user"></i>
+                    </a>
                 </button>
                 
                 <button id="meu-carrinho-botao">
