--- a/paginas/acessorios.html
+++ b/paginas/acessorios.html
@@ -56,7 +56,9 @@
             
             <div class="menu-direita-header">
                 <button id="minha-conta-botao">
-                    <i class="fa-solid fa-user"></i>
+                    <a href="cadastro.html">
+                        <i class="fa-solid fa-user"></i>
+                    </a>
                 </button>
                 
                 <button id="meu-carrinho-botao">
